--- a/requirements.txt
+++ b/requirements.txt
@@ -52,3 +52,70 @@ wcwidth==0.1.8
 webencodings==0.5.1
 widgetsnbextension==3.5.1
 zipp==2.1.0
+attrs==19.3.0
+backcall==0.1.0
+bleach==3.1.0
+bokeh==2.0.2
+cycler==0.10.0
+decorator==4.4.1
+defusedxml==0.6.0
+dynetx==0.2.2
+entrypoints==0.3
+future==0.18.2
+importlib-metadata==1.5.0
+ipykernel==5.1.4
+ipython==7.11.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.16.0
+Jinja2==2.11.0
+jsonschema==3.2.0
+jupyter-client==5.3.4
+jupyter-core==4.6.1
+kiwisolver==1.1.0
+MarkupSafe==1.1.1
+matplotlib==3.1.2
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==5.0.4
+ndlib==5.0.0
+netdispatch==0.0.5
+networkx==2.4
+notebook==6.0.3
+numpy==1.18.1
+packaging==20.3
+pandas==1.0.0
+pandocfilters==1.4.2
+parso==0.6.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.1.1
+pkg-resources==0.0.0
+prometheus-client==0.7.1
+prompt-toolkit==3.0.3
+psycopg2-binary==2.8.4
+ptyprocess==0.6.0
+pydot==1.4.1
+Pygments==2.5.2
+pyparsing==2.4.6
+pyrsistent==0.15.7
+python-dateutil==2.8.1
+python-igraph==0.8.0
+pytz==2019.3
+PyYAML==5.3.1
+pyzmq==18.1.1
+scipy==1.4.1
+seaborn==0.10.0
+Send2Trash==1.5.0
+six==1.14.0
+terminado==0.8.3
+testpath==0.4.4
+texttable==1.6.2
+tornado==6.0.3
+tqdm==4.42.0
+traitlets==4.3.3
+typing-extensions==3.7.4.2
+wcwidth==0.1.8
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+zipp==2.1.0
